[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/locale_view/locale_view.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/locale_view/locale_view_state.gd" type="Script" id=2]
[ext_resource path="res://src/ui/icons/B.svg" type="Texture" id=3]
[ext_resource path="res://src/ui/icons/A.svg" type="Texture" id=4]
[ext_resource path="res://src/ui/icons/AB.svg" type="Texture" id=5]

[node name="LocaleView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "LocaleView"
script = ExtResource( 1 )

[node name="LocaleViewState" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="Layout" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1115.0
margin_bottom = 715.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButton" type="OptionButton" parent="Layout"]
unique_name_in_owner = true
margin_right = 1110.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
text = "All locales"
items = [ "All locales", null, false, 0, null, "A locales", ExtResource( 4 ), false, 1, null, "B locales", ExtResource( 3 ), false, 2, null, "Shared locales", ExtResource( 5 ), false, 3, null ]
selected = 0

[node name="Tree" type="Tree" parent="Layout"]
unique_name_in_owner = true
margin_top = 32.0
margin_right = 1110.0
margin_bottom = 689.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "LocaleTree"
columns = 2
allow_rmb_select = true
hide_folding = true
hide_root = true
select_mode = 1

[node name="StatsLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
margin_top = 693.0
margin_right = 1110.0
margin_bottom = 710.0
theme_type_variation = "StatusBar"
text = "0 locales"
valign = 1
max_lines_visible = 1

[connection signal="changed" from="LocaleViewState" to="." method="_on_state_changed"]
[connection signal="item_selected" from="Layout/OptionButton" to="." method="_on_option_item_selected"]
[connection signal="item_edited" from="Layout/Tree" to="." method="_on_item_edited"]
[connection signal="item_rmb_selected" from="Layout/Tree" to="." method="_on_item_rmb_selected"]
[connection signal="item_selected" from="Layout/Tree" to="." method="_on_item_selected"]
